--- a/smart_brain/package.json
+++ b/smart_brain/package.json
@@ -2,10 +2,17 @@
   "name": "smart_brain",
   "version": "1.0.0",
   "description": "face recognition brain",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "Savin Raul Calin",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  }
 }
